# miscellaneous

./: CMakeLists.txt  README.md
include/: CPUTemperature.h
scripts/: parse_rosdistro.py  set_date.sh  update_and_check_packages.sh  update_git_repo.sh
src/: CPUTemperature.cpp  cpu_temp.cpp  dropbox_hasher.cpp  for_cache_demo.cpp  std_set.cpp
